--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.17",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
